fix inputs on multipicker, align numbers on mobile multipicker

--- a/src/scss/components/NumberPicker/NumberPickerMobile.scss
+++ b/src/scss/components/NumberPicker/NumberPickerMobile.scss
@@ -148,6 +148,7 @@
   border: none;
   height: 30px;
   width: 30px;
+  margin-left: 8px;
   &.-picked {
     color: white;
     background-color: #34b3ff;
@@ -256,7 +257,7 @@
 }
 
 .picker-mob_modal_frame > .picker_bonus .picker_bonus_num {
-  margin-left: 2px;
+  margin-left: 5px;
   width: 32px;
   height: 31px;
   color: #201b3a;
